--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -1,7 +1,7 @@
 .footerContainer{
     width:100%;
     margin: auto;
-    height: 400px;
+    height: auto;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  
 }
@@ -13,17 +13,18 @@
 
 .secondFootera>div>i {
     margin-top: 7px;
-    font-size: 23px;
+    font-size: 35px;
     margin-left: 20px;
 }
 
 .secondFootera>div:last-child>i {
-    font-size: 25px;
+    font-size: 35px;
     margin-left: 58px;
 }
 
 .secondFooterb {
     /* border:1px solid pink; */
+    font-size: 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
