--- a/src/Components/Navbar.module.css
+++ b/src/Components/Navbar.module.css
@@ -1,4 +1,5 @@
 .navContainer {
+  top: 60px;
   display: flex;
   margin: auto;
   width: 100%;
@@ -6,7 +7,9 @@
   font-size: 23px;
   font-weight: bold;
   font-family: sans-serif;
+  position: -webkit-sticky;
   position: sticky;
+  background-color: rgb(232, 239, 241);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .linkDiv {
