--- a/src/Components/SingleProd.module.css
+++ b/src/Components/SingleProd.module.css
@@ -3,6 +3,7 @@
     height: 500px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+
 .singleProddiv{
     margin: auto;
     width: 70%;
@@ -20,4 +21,11 @@
 .singlePageContainer>p{
  
     font-size: 18px;
+}
+.button{
+margin-bottom: 2%;
+background-color: aqua;
+border-radius: 5px;
+border: none;
+padding: 10px 20px 10px 20px;
 }
