--- a/src/Components/Nail.module.css
+++ b/src/Components/Nail.module.css
@@ -17,7 +17,13 @@ height: 400px;
 
 gap:20px
 }
-
+.button{
+    margin-bottom: 2%;
+    background-color: aqua;
+    border-radius: 5px;
+    border: none;
+    padding: 10px 20px 10px 20px;
+    }
 .nailDiv{
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     padding: 5px;
